--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@ body {
     color: #222;
     font: 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
-    padding: 0;
+    padding: 20px 0;
+}
+
+h1 {
+    margin: 20px 0 10px;
 }
 
 h2 {
@@ -34,6 +38,11 @@ time {
     color: #757575;
 }
 
+.avatar {
+    margin-bottom: 5px;
+    width: 120px;
+}
+
 .row {
     display: flex;
     margin-left: auto;
@@ -43,6 +52,5 @@ time {
 
 .column {
     flex: 50%;
-    /*outline: 1px solid salmon;*/
-    padding: 10px;
+    padding: 0 10px 15px;
 }
